--- a/src/app/pages/detalle-viaje/detalle-viaje.page.html
+++ b/src/app/pages/detalle-viaje/detalle-viaje.page.html
@@ -10,14 +10,14 @@
 		<div class="mt-10 max-w-xl m-auto">
 			<div class="mx-8">
 					<div class="my-6 py-4 px-2 bg-white rounded-2xl flex">
-						<div class="bg-black rounded-2xl overflow-hidden aspect-1 max-h-28 justify-start">
-							<img class="object-cover h-full" src="https://img.remediosdigitales.com/4745f3/peugeot-508-2023-gris/1366_2000.jpeg" alt="">
+						<div class="bg-gray-400 rounded-2xl overflow-hidden aspect-1 max-h-28 justify-start">
+							<img class="object-cover h-full" src="https://www.freeiconspng.com/thumbs/car-icon-png/car-icon-png-25.png" alt="">
 						</div>
 						<div class=" px-4">
-							<p class="text-black font-medium text-sm">Marca: Peugeot</p>
-							<p class="text-black font-medium text-sm">Modelo: 508</p>
-							<p class="text-black font-medium text-sm">Año: 2023</p>
-							<p class="text-black font-medium text-sm">Patente: HD3-249-AB4</p>
+							<p class="text-black font-medium text-sm">Marca: </p>
+							<p class="text-black font-medium text-sm">Modelo: </p>
+							<p class="text-black font-medium text-sm">Año:</p>
+							<p class="text-black font-medium text-sm">Patente: {{patente}}</p>
 						</div>
 					</div>
 
