--- a/src/app/pages/login/registro/registro.page.html
+++ b/src/app/pages/login/registro/registro.page.html
@@ -46,7 +46,7 @@
 				<div class="relative flex items-center mt-8">
 					<div class="border h-0 w-full border-stone-300"></div>
 				</div>
-				<button class="bg-yellow-500 rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Registrarse</button>
+				<button class="bg-[#ffc21c] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Registrarse</button>
 			</form>
 		</div>
 		</div>
