--- a/src/app/pages/viajes-disponibles/viajes-disponibles.page.html
+++ b/src/app/pages/viajes-disponibles/viajes-disponibles.page.html
@@ -7,56 +7,30 @@
 			<h2 class="text-center text-white font-sans font-light mt-2" (click)="MenuVolver()">volver</h2>
 		</div>
 		<div class="mt-10 max-w-xl m-auto">
-      <div class="mx-8">
-				<div class="my-6 py-4 px-2 bg-white rounded-2xl flex" (click)="Siguiente()">
+      	<div class="mx-8">
+				<div class="my-6 py-4 px-2 bg-white rounded-2xl flex" *ngFor="let e of Vehiculos" (click)="Siguiente(e.patente)">
 					<div class="bg-black rounded-2xl overflow-hidden aspect-1 max-h-28 justify-start">
-						<img class="object-cover h-full" src="https://upload.wikimedia.org/wikipedia/commons/b/b2/0_Chevrolet_Spark_%28M400%29_0.jpg" alt="">
+						<img class="object-cover h-full" src="{{e.foto}}" alt="">
 					</div>
-					<div class="px-4">
-            <p class="text-black font-medium text-sm">Conductor: @usuario20</p>
-						<p class="text-black font-medium text-sm">Marca: Chevrolet</p>
-						<p class="text-black font-medium text-sm">Modelo: Spark</p>
-						<p class="text-black font-medium text-sm">Patente: HD3-249-AB4</p>
+					<div class="px-4" >
+            <p class="text-black font-medium text-sm">Conductor: {{e.nombre}} {{e.apellido}}</p>
+						<p class="text-black font-medium text-sm">Marca: {{e.marca}}</p>
+						<p class="text-black font-medium text-sm">Modelo: {{e.modelo}}</p>
+						<p class="text-black font-medium text-sm">Patente: {{e.patente}}</p>
             <p class="text-black font-medium text-sm">Destino: San miguel</p>
 					</div>
 				</div>
 
-				<div class="my-6 py-4 px-2 bg-white rounded-2xl flex">
-					<div class="bg-black rounded-2xl overflow-hidden aspect-1 max-h-28 justify-start">
-						<img class="object-cover h-full" src="https://img.remediosdigitales.com/4745f3/peugeot-508-2023-gris/1366_2000.jpeg" alt="">
-					</div>
-					<div class=" px-4">
-            <p class="text-black font-medium text-sm">Conductor: @usuario3</p>
-						<p class="text-black font-medium text-sm">Marca: Peugeot</p>
-						<p class="text-black font-medium text-sm">Modelo: 508</p>
-						<p class="text-black font-medium text-sm">Patente: HD3-249-AB4</p>
-            <p class="text-black font-medium text-sm">Destino: Puente alto</p>
-					</div>
+			<div class="my-4">
+				<div class="relative flex items-center mt-8 m">
+				<div class="border h-0 w-full border-stone-300"></div>
 				</div>
+			</div>
 
-				<div class="my-6 py-4 px-2 bg-white rounded-2xl flex">
-					<div class="bg-black rounded-2xl overflow-hidden aspect-1 max-h-28 justify-start">
-						<img class="object-cover h-full" src="https://www.rutamotor.com/wp-content/uploads/2017/10/Mazda-RX-8-2009-1600-04.jpg" alt="">
-					</div>
-					<div class=" px-4">
-            <p class="text-black font-medium text-sm">Conductor: @usuario14</p>
-						<p class="text-black font-medium text-sm">Marca: Mazda</p>
-						<p class="text-black font-medium text-sm">Modelo: RX8</p>
-						<p class="text-black font-medium text-sm">Patente: HD3-249-AB4</p>
-            <p class="text-black font-medium text-sm">Destino: Santiago Centro</p>
-					</div>
-				</div>
-
-      <div class="my-4">
-        <div class="relative flex items-center mt-8 m">
-          <div class="border h-0 w-full border-stone-300"></div>
-        </div>
-      </div>
-
-      <button class="bg-yellow-500 rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9" (click)="Siguiente()">Siguiente</button>
+			<button class="bg-yellow-500 rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Siguiente</button>
 
 
-      </div>
+		</div>
 
 
 
