Orden en las carpetas de archivo y nuevos colores

--- a/src/app/pages/login/inicio/inicio.page.html
+++ b/src/app/pages/login/inicio/inicio.page.html
@@ -2,7 +2,7 @@
 
 	<div class="h-full w-full">
 		<div class="h-full w-full dark:bg-slate-900">
-			<div class="bg-[#ffc21c] py-16">
+			<div class="bg-[#ffbd59] py-16">
 				<h1 class="text-center text-white font-sans font-bold text-4xl">¡Bienvenido!</h1>
 			</div>
 			<div class="mt-10 max-w-xl m-auto px-10">
@@ -24,9 +24,9 @@
 
 					</div>
 					<a (click)="Recuperar()"
-						class="mt-6 text-yellow-600 flex justify-end text-sm font-normal underline">¿Olvidaste tu contraseña?</a>
+						class="mt-6 text-[#ffbd59] flex justify-end text-sm font-normal underline">¿Olvidaste tu contraseña?</a>
 					<button  (click)="login()"
-					class="bg-yellow-500 rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9" >Iniciar sesión</button>
+					class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9" >Iniciar sesión</button>
 
 					<div class="relative flex items-center mt-8">
 						<div class="border h-0 w-2/4 border-stone-300"></div>
@@ -34,7 +34,7 @@
 						<div class=" border h-0 w-2/4 border-stone-300"></div>
 					</div>
 					<button (click)="Registro()"
-					class="border border-indigo-900 rounded-lg  text-center  text-yellow-500 bg-slate-900 dark:bg-white text-base font-semibold w-full py-3 mt-9"  >Registrate</button>
+					class="border border-indigo-900 rounded-lg  text-center  text-[#ffbd59] bg-slate-900 dark:bg-white text-base font-semibold w-full py-3 mt-9"  >Registrate</button>
 			</div>
 		</div>
 	</div>
