--- a/src/app/pages/login/recuperacion/recuperacion.page.html
+++ b/src/app/pages/login/recuperacion/recuperacion.page.html
@@ -2,9 +2,9 @@
 
 	<div class="h-full w-full dark:bg-slate-900">
 		<div class="h-full w-full ">
-		<div class="bg-[#ffc21c] py-16">
+		<div class="bg-[#ffbd59] py-16">
 			<h1 class="text-center text-white font-sans font-bold text-4xl">Recuperar contraseña</h1>`
-      <h2 class="text-center text-white font-sans font-light mt-2" (click)="Inicio()">volver</h2>
+			<h2 class="text-center text-white font-sans font-light mt-2" (click)="Inicio()">volver</h2>
 		</div>
 		<div class="mt-10 max-w-xl m-auto">
 			<form action="" class="px-10">
@@ -19,7 +19,7 @@
 					<div class="border h-0 w-full border-stone-300"></div>
 				</div>
 
-				<button class="bg-yellow-500 rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Enviar</button>
+				<button class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Enviar</button>
 			</form>
 		</div>
 		</div>
