--- a/src/app/pages/login/registro/registro.page.html
+++ b/src/app/pages/login/registro/registro.page.html
@@ -2,7 +2,7 @@
 
 	<div class="h-full w-full dark:bg-slate-900">
 		<div class="h-full w-full ">
-		<div class="bg-[#ffc21c] py-12">
+		<div class="bg-[#ffbd59] py-12">
 			<h1 class="text-center text-white font-sans font-bold text-4xl">Registro</h1>
 			<h2 class="text-center text-white font-sans font-light mt-2" (click)="Inicio()">volver</h2>
 		</div>
@@ -46,7 +46,7 @@
 				<div class="relative flex items-center mt-8">
 					<div class="border h-0 w-full border-stone-300"></div>
 				</div>
-				<button class="bg-[#ffc21c] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Registrarse</button>
+				<button class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Registrarse</button>
 			</form>
 		</div>
 		</div>
