--- a/src/app/pages/main/crear-viaje/crear-viaje.page.html
+++ b/src/app/pages/main/crear-viaje/crear-viaje.page.html
@@ -2,7 +2,7 @@
 
 	<div class="h-full dark:bg-slate-900">
 		<div class="h-full w-full">
-			<div class="bg-[#ffc21c] py-12">
+			<div class="bg-[#ffbd59] py-12">
 				<h1 class="text-center text-white font-sans font-bold text-4xl">Planificar Viaje</h1>
 				<h2 class="text-center text-white font-sans font-light italic mt-2" (click)="Inicio()">volver</h2>
 			</div>
@@ -56,13 +56,13 @@
 					</div>
 				</div>
 
-				<button (click)="calcularMultiplicacion()" class="bg-yellow-500 rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9" >Calcular precio</button>
+				<button (click)="calcularMultiplicacion()" class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9" >Calcular precio</button>
 
 				<div class="mt-4 ">
 					<p for="" class="dark:text-white text-base font-bold" *ngIf="resultado !== undefined"  >Precio Viaje estimado: ${{ resultado }}</p>
 				</div>
 
-				<button class="bg-yellow-500 rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9" >Publicar</button>
+				<button class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9" >Publicar</button>
 			</div>
 		</div>
 	</div>
