--- a/src/app/pages/main/menu/menu.page.html
+++ b/src/app/pages/main/menu/menu.page.html
@@ -1,7 +1,7 @@
   <div class="h-full dark:bg-slate-900">
     <div class="h-full w-full ">
       <div class="flex flex-col justify-between">
-        <div class="bg-[#ffc21c] py-12">
+        <div class="bg-[#ffbd59] py-12">
           <h1 class="text-center text-white font-bold text-4xl">¡Hola! @usuario</h1>
         </div>
         <div class="dark:bg-white bg-slate-900 py-1 ">
@@ -10,12 +10,12 @@
       </div>
 
       <div class="px-5 max-w-xl m-auto">
-        <button class="bg-[#ffc21c] rounded-2xl shadow text-center text-white text-2xl font-semibold w-full py-16 mt-10" (click)="BuscarViaje()">Buscar Viaje</button>
+        <button class="bg-[#ffbd59] rounded-2xl shadow text-center text-white text-2xl font-semibold w-full py-16 mt-10" (click)="BuscarViaje()">Buscar Viaje</button>
 
         <div class="relative flex items-center mt-8">
           <div class="border h-0 w-full border-stone-300"></div>
         </div>
-        <button class="border border-indigo-900 rounded-2xl  text-center  text-yellow-500 bg-slate-900 dark:bg-white text-2xl font-semibold w-full py-16 mt-9" (click)="CrearViaje()">Crear Viaje</button>
+        <button class="border border-indigo-900 rounded-2xl  text-center  text-[#ffbd59] bg-slate-900 dark:bg-white text-2xl font-semibold w-full py-16 mt-9" (click)="CrearViaje()">Crear Viaje</button>
       </div>
   </div>
 
