--- a/src/app/pages/main/registrar-vehiculo/registrar-vehiculo.page.html
+++ b/src/app/pages/main/registrar-vehiculo/registrar-vehiculo.page.html
@@ -2,13 +2,13 @@
 
 	<div class="h-full max-w-xl container mx-auto dark:bg-slate-900">
 		<div class="h-full w-full ">
-		<div class="bg-[#ffc21c] py-12">
+		<div class="bg-[#ffbd59] py-12">
 			<h1 class="text-center text-white font-sans font-bold text-4xl">Registro</h1>
 			<h2 class="text-center text-white font-sans font-light mt-2" >volver</h2>
 		</div>
 		<div class="mt-10 mx-8">
 			<div class="py-14 px-2 bg-[#09090b]">
-          <div class="container mx-4 my-4 bg-[#ffc21c]">
+          <div class="container mx-4 my-4 bg-[#ffbd59]">
 
           </div>
       </div>
