--- a/src/app/pages/main/viajes-disponibles/viajes-disponibles.page.html
+++ b/src/app/pages/main/viajes-disponibles/viajes-disponibles.page.html
@@ -2,7 +2,7 @@
 
 	<div class="h-full  dark:bg-slate-900">
 		<div class="h-full w-full ">
-		<div class="bg-[#ffc21c] py-12">
+		<div class="bg-[#ffbd59] py-12">
 			<h1 class="text-center text-white font-sans font-bold text-4xl">Viajes disponibles</h1>
 			<h2 class="text-center text-white font-sans font-light mt-2" (click)="MenuVolver()">volver</h2>
 		</div>
@@ -27,7 +27,7 @@
 				</div>
 			</div>
 
-			<button class="bg-yellow-500 rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Siguiente</button>
+			<button class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Siguiente</button>
 
 
 		</div>
