--- a/src/app/pages/main/detalle-viaje/detalle-viaje.page.html
+++ b/src/app/pages/main/detalle-viaje/detalle-viaje.page.html
@@ -2,7 +2,7 @@
 
 <div class="h-full  dark:bg-slate-900">
 	<div class="h-full w-full ">
-		<div class="bg-[#ffc21c] py-12">
+		<div class="bg-[#ffbd59] py-12">
 			<h1 class="text-center text-white font-sans font-bold text-4xl">Detalle del viajes</h1>
 			<h2 class="text-center text-white font-sans font-light mt-2" (click)="Volver()">volver</h2>
 		</div>
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 
-				<button class="bg-yellow-500 rounded-2xl shadow text-center text-white text-2xl font-semibold w-full py-3 mt-2" >Pagar</button>
+				<button class="bg-[#ffbd59] rounded-2xl shadow text-center text-white text-2xl font-semibold w-full py-3 mt-2" >Pagar</button>
 			</div>
 
 		</div>
