--- a/src/app/pages/main/viajes-disponibles/viajes-disponibles.page.html
+++ b/src/app/pages/main/viajes-disponibles/viajes-disponibles.page.html
@@ -1,41 +1,67 @@
 <ion-content [fullscreen]="true">
+    <div class="h-full dark:bg-slate-900">
+        <div class="h-full w-full">
+            <div class="bg-[#ffbd59] py-12">
+                <h1 class="text-center text-white font-sans font-bold text-4xl">
+                    Viajes disponibles
+                </h1>
+                <h2
+                    class="text-center text-white font-sans font-light mt-2"
+                    (click)="MenuVolver()"
+                >
+                    volver
+                </h2>
+            </div>
+            <div class="mt-10 max-w-xl m-auto">
+                <div class="mx-8">
+                    <div
+                        class="my-6 py-4 px-2 bg-white rounded-2xl flex"
+                        *ngFor="let e of Vehiculos"
+                        (click)="Siguiente(e.patente)"
+                    >
+                        <div
+                            class="bg-black rounded-2xl overflow-hidden aspect-1 max-h-28 justify-start"
+                        >
+                            <img
+                                class="object-cover h-full"
+                                src="{{e.img}}"
+                                alt="imagen del vehículo"
+                            />
+                        </div>
+                        <div class="px-4">
+                            <p class="text-black font-medium text-sm">
+                                Conductor:
+                            </p>
+                            <p class="text-black font-medium text-sm">
+                                Marca: {{e.marca}}
+                            </p>
+                            <p class="text-black font-medium text-sm">
+                                Modelo: {{e.modelo}}
+                            </p>
+                            <p class="text-black font-medium text-sm">
+                                Patente: {{e.patente}}
+                            </p>
+                            <p class="text-black font-medium text-sm">
+                                Destino: San miguel
+                            </p>
+                        </div>
+                    </div>
 
-	<div class="h-full  dark:bg-slate-900">
-		<div class="h-full w-full ">
-		<div class="bg-[#ffbd59] py-12">
-			<h1 class="text-center text-white font-sans font-bold text-4xl">Viajes disponibles</h1>
-			<h2 class="text-center text-white font-sans font-light mt-2" (click)="MenuVolver()">volver</h2>
-		</div>
-		<div class="mt-10 max-w-xl m-auto">
-      	<div class="mx-8">
-				<div class="my-6 py-4 px-2 bg-white rounded-2xl flex" *ngFor="let e of Vehiculos" (click)="Siguiente(e.patente)">
-					<div class="bg-black rounded-2xl overflow-hidden aspect-1 max-h-28 justify-start">
-						<img class="object-cover h-full" src="{{e.foto}}" alt="">
-					</div>
-					<div class="px-4" >
-            <p class="text-black font-medium text-sm">Conductor: {{e.nombre}} {{e.apellido}}</p>
-						<p class="text-black font-medium text-sm">Marca: {{e.marca}}</p>
-						<p class="text-black font-medium text-sm">Modelo: {{e.modelo}}</p>
-						<p class="text-black font-medium text-sm">Patente: {{e.patente}}</p>
-            <p class="text-black font-medium text-sm">Destino: San miguel</p>
-					</div>
-				</div>
+                    <div class="my-4">
+                        <div class="relative flex items-center mt-8 m">
+                            <div
+                                class="border h-0 w-full border-stone-300"
+                            ></div>
+                        </div>
+                    </div>
 
-			<div class="my-4">
-				<div class="relative flex items-center mt-8 m">
-				<div class="border h-0 w-full border-stone-300"></div>
-				</div>
-			</div>
-
-			<button class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9">Siguiente</button>
-
-
-		</div>
-
-
-
-		</div>
-		</div>
-	</div>
-
+                    <button
+                        class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
+                    >
+                        Siguiente
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 </ion-content>
