Fix del bg color

--- a/src/app/pages/login/inicio/inicio.page.html
+++ b/src/app/pages/login/inicio/inicio.page.html
@@ -1,6 +1,5 @@
 <ion-content [fullscreen]="true">
-    <div class="h-full w-full">
-        <div class="h-full w-full dark:bg-slate-900">
+        <div class="h-fit min-h-full dark:bg-slate-900">
             <div class="bg-[#ffbd59] py-16">
                 <h1 class="text-center text-white font-sans font-bold text-4xl">
                     ¡Bienvenido!
@@ -67,5 +66,4 @@
                 </button>
             </div>
         </div>
-    </div>
 </ion-content>
