--- a/src/app/pages/main/menu/menu.page.html
+++ b/src/app/pages/main/menu/menu.page.html
@@ -1,5 +1,5 @@
 <ion-content [fullscreen]="true">
-    <div class="h-full dark:bg-slate-900">
+    <div class="h-fit min-h-full dark:bg-slate-900">
         <div class="h-full w-full">
             <div class="flex flex-col justify-between">
                 <div class="bg-[#ffbd59] py-12">
