--- a/src/app/pages/login/registro/registro.page.html
+++ b/src/app/pages/login/registro/registro.page.html
@@ -1,5 +1,5 @@
 <ion-content [fullscreen]="true">
-    <div class="h-full w-full dark:bg-slate-900">
+    <div class="h-fit min-h-full dark:bg-slate-900">
         <div class="h-full w-full">
             <div class="bg-[#ffbd59] py-12">
                 <h1 class="text-center text-white font-sans font-bold text-4xl">
