Alerta de logout y color personalizado

--- a/src/app/pages/login/inicio/inicio.page.html
+++ b/src/app/pages/login/inicio/inicio.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
         <div class="h-fit min-h-full dark:bg-slate-900">
-            <div class="bg-[#ffbd59] py-16">
+            <div class="bg-amarillo-ppal py-16">
                 <h1 class="text-center text-white font-sans font-bold text-4xl">
                     ¡Bienvenido!
                 </h1>
@@ -43,12 +43,12 @@
                 </div>
                 <a
                     (click)="Recuperar()"
-                    class="mt-6 text-[#ffbd59] flex justify-end text-sm font-normal underline"
+                    class="mt-6 text-amarillo-ppal flex justify-end text-sm font-normal underline"
                     >¿Olvidaste tu contraseña?</a
                 >
                 <button
                     (click)="login()"
-                    class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
+                    class="bg-amarillo-ppal rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
                 >
                     Iniciar sesión
                 </button>
@@ -60,7 +60,7 @@
                 </div>
                 <button
                     (click)="Registro()"
-                    class="border border-indigo-900 rounded-lg text-center text-[#ffbd59] bg-slate-900 dark:bg-white text-base font-semibold w-full py-3 mt-9"
+                    class="border border-indigo-900 rounded-lg text-center text-amarillo-ppal bg-slate-900 dark:bg-white text-base font-semibold w-full py-3 mt-9"
                 >
                     Registrate
                 </button>
