--- a/src/app/pages/main/crear-viaje/crear-viaje.page.html
+++ b/src/app/pages/main/crear-viaje/crear-viaje.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
     <div class="h-fit min-h-full dark:bg-slate-900">
         <div class="h-full w-full">
-            <div class="bg-[#ffbd59] py-12">
+            <div class="bg-amarillo-ppal py-12">
                 <h1 class="text-center text-white font-sans font-bold text-4xl">
                     Planificar Viaje
                 </h1>
@@ -39,7 +39,7 @@
 
                 <div class="relative flex items-center">
                     <button
-                        class="w-2/4 bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold py-3"
+                        class="w-2/4 bg-amarillo-ppal rounded-lg shadow text-center text-white text-base font-semibold py-3"
                     >
                     <!-- No funciona de momento -->
                         Seleccionar vehículo
@@ -47,7 +47,7 @@
                     <div class="mx-2"></div>
                     <button
                         (click)="registrarVehiculo()"
-                        class="w-2/4 bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold py-3"
+                        class="w-2/4 bg-amarillo-ppal rounded-lg shadow text-center text-white text-base font-semibold py-3"
                     >
                         Registrar vehículo
                     </button>
@@ -129,7 +129,7 @@
 
                 <button
                     (click)="calcularMultiplicacion()"
-                    class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
+                    class="bg-amarillo-ppal rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
                 >
                     Calcular precio
                 </button>
@@ -145,7 +145,7 @@
                 </div>
 
                 <button
-                    class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
+                    class="bg-amarillo-ppal rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
                 >
                     Publicar
                 </button>
