--- a/src/app/pages/main/detalle-viaje/detalle-viaje.page.html
+++ b/src/app/pages/main/detalle-viaje/detalle-viaje.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
     <div class="h-fit min-h-full dark:bg-slate-900">
         <div class="h-full w-full">
-            <div class="bg-[#ffbd59] py-12">
+            <div class="bg-amarillo-ppal py-12">
                 <h1 class="text-center text-white font-sans font-bold text-4xl">
                     Detalle del viajes
                 </h1>
@@ -64,7 +64,7 @@
                     </div>
 
                     <button
-                        class="bg-[#ffbd59] rounded-2xl shadow text-center text-white text-2xl font-semibold w-full py-3 mt-2"
+                        class="bg-amarillo-ppal rounded-2xl shadow text-center text-white text-2xl font-semibold w-full py-3 mt-2"
                     >
                         Pagar
                     </button>
