--- a/src/app/pages/login/recuperacion/recuperacion.page.html
+++ b/src/app/pages/login/recuperacion/recuperacion.page.html
@@ -1,13 +1,12 @@
 <ion-content [fullscreen]="true">
     <div class="h-fit min-h-full dark:bg-slate-900">
         <div class="h-full w-full">
-            <div class="bg-[#ffbd59] py-16">
+            <div class="bg-amarillo-ppal py-12">
                 <h1 class="text-center text-white font-sans font-bold text-4xl">
                     Recuperar contraseña
                 </h1>
-                `
                 <h2
-                    class="text-center text-white font-sans font-light mt-2"
+                    class="text-center text-white font-sans font-light py-2"
                     (click)="Inicio()"
                 >
                     volver
@@ -38,7 +37,7 @@
                     </div>
 
                     <button
-                        class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
+                        class="bg-amarillo-ppal rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
                     >
                         Enviar
                     </button>
