--- a/src/app/pages/main/registrar-vehiculo/registrar-vehiculo.page.html
+++ b/src/app/pages/main/registrar-vehiculo/registrar-vehiculo.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
     <div class="h-fit min-h-full dark:bg-slate-900">
         <div class="h-full w-full">
-            <div class="bg-[#ffbd59] py-12">
+            <div class="bg-amarillo-ppal py-12">
                 <h1 class="text-center text-white font-sans font-bold text-4xl">
                     Registrar vehículo
                 </h1>
@@ -77,7 +77,7 @@
                         <div class="border h-0 w-full border-stone-300"></div>
                     </div>
                     <button
-                        class="bg-[#ffbd59] rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
+                        class="bg-amarillo-ppal rounded-lg shadow text-center text-white text-base font-semibold w-full py-3 mt-9"
                     >
                         Registrar
                     </button>
