creacion de carpeta 'alertas'

--- a/src/app/pages/login/inicio/inicio.page.html
+++ b/src/app/pages/login/inicio/inicio.page.html
@@ -7,7 +7,7 @@
             </div>
             <div class="mt-10 max-w-xl m-auto px-10">
                 <div class="mt-2">
-                    <label for="" class="dark:text-white text-base font-normal"
+                    <label for="email" class="dark:text-white text-base font-normal"
                         >Nombre de usuario:</label
                     >
                     <div
@@ -15,7 +15,7 @@
                     >
                         <input
                             type="text"
-                            name="texto1"
+                            name="email"
                             placeholder=""
                             id=""
                             [(ngModel)]="email"
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="mt-6">
-                    <label for="" class="dark:text-white text-base font-normal"
+                    <label for="email" class="dark:text-white text-base font-normal"
                         >Contraseña:</label
                     >
                     <div
@@ -33,7 +33,7 @@
                     >
                         <input
                             type="password"
-                            name="texto2"
+                            name="email"
                             placeholder=""
                             id=""
                             [(ngModel)]="contrasena"
