--- a/src/app/pages/login/recuperacion/recuperacion.page.html
+++ b/src/app/pages/login/recuperacion/recuperacion.page.html
@@ -16,7 +16,7 @@
                 <form action="" class="px-10">
                     <div class="mt-2">
                         <label
-                            for=""
+                            for="email"
                             class="dark:text-white text-base font-normal"
                             >Correo electrónico</label
                         >
@@ -25,7 +25,7 @@
                         >
                             <input
                                 type="text"
-                                name=""
+                                name="email"
                                 placeholder=""
                                 id=""
                                 class="w-full dark:text-white dark:placeholder:text-neutral-600 dark:bg-zinc-950 px-4 bg-transparent outline-none rounded-lg"
