--- a/src/app/pages/login/registro/registro.page.html
+++ b/src/app/pages/login/registro/registro.page.html
@@ -16,7 +16,7 @@
                 <form action="" class="px-10">
                     <div class="mt-2">
                         <label
-                            for=""
+                            for="nombre"
                             class="dark:text-white text-base font-normal"
                             >Nombre</label
                         >
@@ -25,7 +25,7 @@
                         >
                             <input
                                 type="text"
-                                name=""
+                                name="nombre"
                                 placeholder=""
                                 id=""
                                 class="w-full dark:text-white dark:placeholder:text-neutral-600 dark:bg-zinc-950 px-4 bg-transparent outline-none rounded-lg"
@@ -34,7 +34,7 @@
                     </div>
                     <div class="mt-2">
                         <label
-                            for=""
+                            for="apellido"
                             class="dark:text-white text-base font-normal"
                             >Apellido(s)</label
                         >
@@ -43,7 +43,7 @@
                         >
                             <input
                                 type="text"
-                                name=""
+                                name="apellido"
                                 placeholder=""
                                 id=""
                                 class="w-full dark:text-white dark:placeholder:text-neutral-600 dark:bg-zinc-950 px-4 bg-transparent outline-none rounded-lg"
@@ -52,7 +52,7 @@
                     </div>
                     <div class="mt-2">
                         <label
-                            for=""
+                            for="email"
                             class="dark:text-white text-base font-normal"
                             >Correo electrónico</label
                         >
@@ -61,7 +61,7 @@
                         >
                             <input
                                 type="text"
-                                name="emailtxt"
+                                name="email"
                                 placeholder=""
                                 id=""
                                 [(ngModel)]="email"
@@ -71,7 +71,7 @@
                     </div>
                     <div class="mt-2">
                         <label
-                            for=""
+                            for="usuario"
                             class="dark:text-white text-base font-normal"
                             >Nombre de usuario</label
                         >
@@ -80,7 +80,7 @@
                         >
                             <input
                                 type="text"
-                                name=""
+                                name="usuario"
                                 placeholder=""
                                 id=""
                                 class="w-full dark:text-white dark:placeholder:text-neutral-600 dark:bg-zinc-950 px-4 bg-transparent outline-none rounded-lg"
@@ -89,7 +89,7 @@
                     </div>
                     <div class="mt-6">
                         <label
-                            for=""
+                            for="password"
                             class="dark:text-white text-base font-normal"
                             >Contraseña</label
                         >
@@ -108,7 +108,7 @@
                     </div>
                     <div class="mt-6">
                         <label
-                            for=""
+                            for="confirmpassword"
                             class="dark:text-white text-base font-normal"
                             >Confirmar Contraseña</label
                         >
